--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,6 +2,7 @@ Target = kernel.elf
 OBJS = main.o
 
 CXXFLAGS += -O2 -Wall -g --target=x86_64-elf -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -std=c++17
+# --image-base 0x110000 means vaddress of segment Load of program header begin in 0x110000
 LDFLAGS += --entry KernelMain -z norelro --image-base 0x110000 --static
 
 # .PHONY means phony target
