--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,4 +1,4 @@
-Target = kernel.elf
+TARGET = kernel.elf
 OBJS = main.o
 
 CXXFLAGS += -O2 -Wall -g --target=x86_64-elf -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -std=c++17
