--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,13 +1,19 @@
 TARGET = kernel.elf
-OBJS = main.o graphics.o font.o hankaku.o newlib_support.o console.o pci.o asmfunc.o
-# OBJS:.o=.d means change .o file to .d file. notdir means remove path. addprefix . means add '.' to each file. dir means directory path like './'. join means combine like ./ + main.d => ./.main.d
+OBJS = main.o graphics.o mouse.o font.o hankaku.o newlib_support.o console.o \
+       pci.o asmfunc.o libcxx_support.o logger.o \
+       usb/memory.o usb/device.o usb/xhci/ring.o usb/xhci/trb.o usb/xhci/xhci.o \
+       usb/xhci/port.o usb/xhci/device.o usb/xhci/devmgr.o usb/xhci/registers.o \
+       usb/classdriver/base.o usb/classdriver/hid.o usb/classdriver/keyboard.o \
+       usb/classdriver/mouse.o
 DEPENDS = $(join $(dir $(OBJS)),$(addprefix .,$(notdir $(OBJS:.o=.d))))
 
-CXXFLAGS += -O2 -Wall -g --target=x86_64-elf -ffreestanding -mno-red-zone -fno-exceptions -fno-rtti -std=c++17
-# --image-base 0x110000 means vaddress of segment Load of program header begin in 0x110000
-LDFLAGS += --entry KernelMain -z norelro --image-base 0x110000 --static
+CPPFLAGS += -I.
+CFLAGS   += -O2 -Wall -g --target=x86_64-elf -ffreestanding -mno-red-zone
+CXXFLAGS += -O2 -Wall -g --target=x86_64-elf -ffreestanding -mno-red-zone \
+            -fno-exceptions -fno-rtti -std=c++17
+LDFLAGS  += --entry KernelMain -z norelro --image-base 0x110000 --static
 
-# .PHONY means phony target
+
 .PHONY: all
 all: $(TARGET)
 
@@ -15,30 +21,25 @@ all: $(TARGET)
 clean:
 	rm -rf *.o
 
-# write Makefile as prereq to build when Makefile update
 kernel.elf: $(OBJS) Makefile
-	ld.lld $(LDFLAGS) -o kernel.elf $(OBJS) -lc
+	ld.lld $(LDFLAGS) -o kernel.elf $(OBJS) -lc -lc++
 
-# $< means first prereq
 %.o: %.cpp Makefile
-	clang++ $(CPPFLAGS) $(CXXFLAGS) -c $<
+	clang++ $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
 
-# -MM means dependency. > means output redirect. $@ means target 
-# eval is declaration. $(< means $<. in this, OBJ = main.o
-# sed 's|x|y|' z means replace x to y in z file. 
 .%.d: %.cpp
 	clang++ $(CPPFLAGS) $(CXXFLAGS) -MM $< > $@
 	$(eval OBJ = $(<:.cpp=.o))
 	sed --in-place 's|$(notdir $(OBJ))|$(OBJ)|' $@
 
 %.o: %.c Makefile
-	clang $(CPPFLAGS) $(CFLAGS) -c $<
+	clang $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
 .%.d: %.c
 	clang $(CPPFLAGS) $(CFLAGS) -MM $< > $@
 	$(eval OBJ = $(<:.c=.o))
-	sed --in-place 's|$(notdir $(OBJ))|$(OBJ)' $@
-# nasm means asm translate to o file
+	sed --in-place 's|$(notdir $(OBJ))|$(OBJ)|' $@
+
 %.o: %.asm Makefile
 	nasm -f elf64 -o $@ $<
 
@@ -51,11 +52,8 @@ hankaku.o: hankaku.bin
 .%.d: %.bin
 	touch $@
 
-# $(MAKE) means make commands. make commands often have difference depends on environment.
 .PHONY: depends
 depends:
 	$(MAKE) $(DEPENDS)
 
-#  run when makefile is loaded
 -include $(DEPENDS)
-
